--- a/constant/css/constant.scss
+++ b/constant/css/constant.scss
@@ -12,6 +12,8 @@ $listTitleColor: #333;
 $listTextSize: 30rpx;
 // 列表文字颜色
 $listTextColor: #999;
+// 点击的hover样式
+$clickLightColor: #f8f9fa;
 
 // 水平垂直居中
 @mixin center {
@@ -29,4 +31,21 @@ $listTextColor: #999;
 @mixin listText {
 	font-size: $listTextSize;
 	color: $listTextColor;
+}
+
+// 文字溢出省略
+@mixin wordBreak {
+	/* #ifdef APP-PLUS-NVUE */
+	lines: 1;
+	text-overflow: ellipsis;
+	/* #endif */
+	
+	/* #ifndef APP-PLUS-NVUE */
+	display: -webkit-box; /** 对象作为伸缩盒子模型显示 **/
+	overflow: hidden;
+	word-break: break-all;  /* break-all(允许在单词内换行。) */
+	text-overflow: ellipsis;  /* 超出部分省略号 */
+	-webkit-box-orient: vertical; /** 设置或检索伸缩盒对象的子元素的排列方式 **/
+	-webkit-line-clamp: 1; /** 显示的行数 **/
+	/* #endif */
 }
