--- a/constant/css/constant.scss
+++ b/constant/css/constant.scss
@@ -88,3 +88,16 @@ $selectedColor: #07c261;
 	width: 60rpx;
 	height: 60rpx;
 }
+
+// 分割线盒子布局
+@mixin splitLineBox {
+	width: $boxWidth;
+	height: 40rpx;
+	background-color: $boxBgColor;
+}
+
+// 导航栏样式
+@mixin tabBarStyle {
+	width: $boxWidth;
+	background-color: $boxBgColor;
+}
