--- a/constant/css/constant.scss
+++ b/constant/css/constant.scss
@@ -36,6 +36,13 @@ $selectedColor: #07c261;
 	border-style: solid;
 }
 
+// 顶部边框样式
+@mixin borderTop {
+	border-top-color: $lineBorderColor;
+	border-top-width: 1rpx;
+	border-style: solid;
+}
+
 // 水平垂直居中
 @mixin center {
 	flex-direction: row;
@@ -100,4 +107,10 @@ $selectedColor: #07c261;
 @mixin tabBarStyle {
 	width: $boxWidth;
 	background-color: $boxBgColor;
+}
+
+// 右箭头样色
+@mixin arrowStyle {
+	font-size: 28rpx;
+	color: $listTextColor;
 }
